build: add options to disable sanitizers in Debug builds
Add C3_ENABLE_ASAN and C3_ENABLE_UBSAN options (both default ON) to allow
disabling AddressSanitizer and UndefinedBehaviorSanitizer. This fixes the
ARM64 cross-compilation CI which needs sanitizers disabled since ASan
doesn't work with QEMU user-mode emulation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(C3_ENABLE_CLANG_TIDY "Run clang-tidy during builds" OFF)
+option(C3_ENABLE_ASAN "Enable AddressSanitizer in Debug builds" ON)
+option(C3_ENABLE_UBSAN "Enable UndefinedBehaviorSanitizer in Debug builds" ON)
 
 if(C3_ENABLE_CLANG_TIDY)
   find_program(CLANG_TIDY_EXE NAMES clang-tidy)
@@ -17,7 +19,16 @@ if(C3_ENABLE_CLANG_TIDY)
   set(CMAKE_CXX_CLANG_TIDY ${CLANG_TIDY_EXE})
 endif()
 
-set(SANITIZER_FLAGS -fsanitize=address -fsanitize=undefined -fno-omit-frame-pointer)
+set(SANITIZER_FLAGS "")
+if(C3_ENABLE_ASAN)
+  list(APPEND SANITIZER_FLAGS -fsanitize=address)
+endif()
+if(C3_ENABLE_UBSAN)
+  list(APPEND SANITIZER_FLAGS -fsanitize=undefined)
+endif()
+if(C3_ENABLE_ASAN OR C3_ENABLE_UBSAN)
+  list(APPEND SANITIZER_FLAGS -fno-omit-frame-pointer)
+endif()
 set(RELEASE_COMPILE_FLAGS -O3 -flto)
 set(RELEASE_LINK_FLAGS -flto)
 set(WARNING_FLAGS -Wall -Wextra -Wpedantic -Wshadow -Wconversion)
