--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,24 +26,24 @@ jobs:
             runner: ubuntu-latest
             arch: arm64
             cross: true
-          - os: macos
-            runner: macos-13
-            arch: x64
-            cc: clang
-            cxx: clang++
-            clang_tools_bin: /usr/local/opt/llvm/bin
-          - os: macos
-            runner: macos-14
-            arch: arm64
-            cc: clang
-            cxx: clang++
-            clang_tools_bin: /opt/homebrew/opt/llvm/bin
-          - os: windows
-            runner: windows-latest
-            arch: x64
-            cc: clang-cl
-            cxx: clang-cl
-            clang_tools_bin: 'C:/Program Files/LLVM/bin'
+          # - os: macos
+          #   runner: macos-13
+          #   arch: x64
+          #   cc: clang
+          #   cxx: clang++
+          #   clang_tools_bin: /usr/local/opt/llvm/bin
+          # - os: macos
+          #   runner: macos-14
+          #   arch: arm64
+          #   cc: clang
+          #   cxx: clang++
+          #   clang_tools_bin: /opt/homebrew/opt/llvm/bin
+          # - os: windows
+          #   runner: windows-latest
+          #   arch: x64
+          #   cc: clang-cl
+          #   cxx: clang-cl
+          #   clang_tools_bin: 'C:/Program Files/LLVM/bin'
 
     steps:
       - name: Checkout
