fix(ci): use system clang on macOS to avoid libc++ ABI mismatch
Homebrew's LLVM 21 uses newer libc++ headers with symbols like
std::__hash_memory that aren't in the system libc++, causing linker
failures. Using explicit /usr/bin/clang paths ensures the compiler
uses matching headers and libraries.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,14 +29,14 @@ jobs:
           - os: macos
             runner: macos-13
             arch: x64
-            cc: clang
-            cxx: clang++
+            cc: /usr/bin/clang
+            cxx: /usr/bin/clang++
             clang_tools_bin: /usr/local/opt/llvm/bin
           - os: macos
             runner: macos-14
             arch: arm64
-            cc: clang
-            cxx: clang++
+            cc: /usr/bin/clang
+            cxx: /usr/bin/clang++
             clang_tools_bin: /opt/homebrew/opt/llvm/bin
           # - os: windows
           #   runner: windows-latest
