fix(ci): explicitly set Ninja path on Windows to fix CMake configure

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
             cc: clang-cl
             cxx: clang-cl
             clang_tools_bin: 'C:/Program Files/LLVM/bin'
+            ninja_path: 'C:/ProgramData/chocolatey/bin/ninja.exe'
 
     steps:
       - name: Checkout
@@ -85,7 +86,8 @@ jobs:
         run: |
           cmake --preset debug \
             -DCMAKE_C_COMPILER=${{ matrix.cc }} \
-            -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
+            -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} \
+            ${{ matrix.ninja_path && format('-DCMAKE_MAKE_PROGRAM={0}', matrix.ninja_path) || '' }}
 
       - name: Configure (Debug, cross-compile ARM64)
         if: matrix.cross
