refactor(ci): update macOS runners and split lint into parallel job
- Update macOS runners to macos-15-intel (x64) and macos-latest (arm64)
- Extract lint/format checks into separate parallel job for faster feedback
- Remove dead code: unused clang_tools_bin field and cross flag
- Remove unnecessary clang-tidy/clang-format from cross-compile deps
- Simplify conditionals using matrix.cc and arch checks

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,13 +34,13 @@ jobs:
             arch: arm64
             cross: true
           - os: macos
-            runner: macos-13
+            runner: macos-15-intel
             arch: x64
             cc: clang
             cxx: clang++
             clang_tools_bin: /usr/local/opt/llvm/bin
           - os: macos
-            runner: macos-14
+            runner: macos-latest
             arch: arm64
             cc: clang
             cxx: clang++
