fix(build): use MSVC flags on Windows and lld linker on Linux
- Add MSVC-specific compile/link flags to avoid C++98 compat warnings with clang-cl
- Install lld and use -fuse-ld=lld on Linux x64 to fix LTO version mismatch
- LLVM gold plugin (v17) was incompatible with clang (v18) LTO bitcode

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
             arch: x64
             cc: clang
             cxx: clang++
+            linker_flags: '-fuse-ld=lld'
           - os: linux
             runner: ubuntu-latest
             arch: arm64
@@ -58,7 +59,7 @@ jobs:
         if: matrix.os == 'linux' && matrix.arch == 'x64'
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build clang
+          sudo apt-get install -y ninja-build clang lld
 
       - name: Install dependencies (Linux arm64)
         if: matrix.os == 'linux' && matrix.arch == 'arm64'
@@ -86,7 +87,8 @@ jobs:
           cmake --preset release \
             -DCMAKE_C_COMPILER="${{ matrix.cc }}" \
             -DCMAKE_CXX_COMPILER="${{ matrix.cxx }}" \
-            ${{ matrix.ninja_path && format('-DCMAKE_MAKE_PROGRAM="{0}"', matrix.ninja_path) || '' }}
+            ${{ matrix.ninja_path && format('-DCMAKE_MAKE_PROGRAM="{0}"', matrix.ninja_path) || '' }} \
+            ${{ matrix.linker_flags && format('-DCMAKE_EXE_LINKER_FLAGS="{0}"', matrix.linker_flags) || '' }}
 
       - name: Configure (Release, cross-compile arm64)
         if: matrix.os == 'linux' && matrix.arch == 'arm64'
