--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,15 @@ endif()
 if(C3_ENABLE_ASAN OR C3_ENABLE_UBSAN)
   list(APPEND SANITIZER_FLAGS -fno-omit-frame-pointer)
 endif()
-set(RELEASE_COMPILE_FLAGS -O3 -flto)
-set(RELEASE_LINK_FLAGS -flto)
-set(WARNING_FLAGS -Wall -Wextra -Wpedantic -Wshadow -Wconversion)
+if(MSVC)
+  set(RELEASE_COMPILE_FLAGS /O2 /GL)
+  set(RELEASE_LINK_FLAGS /LTCG)
+  set(WARNING_FLAGS /W4 /WX-)
+else()
+  set(RELEASE_COMPILE_FLAGS -O3 -flto)
+  set(RELEASE_LINK_FLAGS -flto)
+  set(WARNING_FLAGS -Wall -Wextra -Wpedantic -Wshadow -Wconversion)
+endif()
 
 function(c3_apply_standard_settings target)
   target_compile_features(${target} PUBLIC cxx_std_23)
