--- a/.github/workflows/strength-test.yml
+++ b/.github/workflows/strength-test.yml
@@ -111,8 +111,9 @@ jobs:
 
       - name: Install fastchess
         run: |
-          wget -q https://github.com/Disservin/fastchess/releases/latest/download/fastchess-linux-x86_64 \
-            -O /tmp/fastchess
+          wget -q https://github.com/Disservin/fastchess/releases/download/v1.7.0-alpha/fastchess-linux-x86-64.tar \
+            -O /tmp/fastchess.tar
+          tar -xf /tmp/fastchess.tar -C /tmp
           chmod +x /tmp/fastchess
           sudo mv /tmp/fastchess /usr/local/bin/fastchess
 
